# jungle_falcon

./: CMakeLists.txt  README.md
asm/: CMakeLists.txt  Makefile  a.out  addi.s  disasm_parser.py  test.hexdump  test.lds  test.out  test.s  test_real.s
c/: CMakeLists.txt  Makefile  a.out  caesar.c  linker.py  rand.txt  riscv.lds  start.s  test.c
sim/: CMakeLists.txt
sim/include/: alu.hpp  b_type_instructions.hpp  command_interpreter.hpp  commands.hpp  cpu.hpp  hardware_object.hpp  hazard_detection.hpp  i_type_instructions.hpp  instruction_factory.hpp  instructions.hpp  j_type_instructions.hpp  memory.hpp  pipeline.hpp  r_type_instructions.hpp  register_file.hpp  riscv_defs.hpp  s_type_instructions.hpp  u_type_instructions.hpp
sim/src/: alu.cpp  b_type_instructions.cpp  command_interpreter.cpp  commands.cpp  cpu.cpp  hazard_detection.cpp  i_type_instructions.cpp  instruction_factory.cpp  instructions.cpp  j_type_instructions.cpp  main.cpp  memory.cpp  pipeline.cpp  r_type_instructions.cpp  register_file.cpp  s_type_instructions.cpp  u_type_instructions.cpp
testing/: CMakeLists.txt
testing/include/: register_file_tests.hpp
testing/src/: riscv_tests.cpp
